# actix_web_sample

./: .env.example  .env.github  .gitignore  Cargo.toml  README.md
.github/workflows/: cargo_test.yml  clippy.yml
docker/: .env  docker-compose.yml
docker/mysql/docker-entrypoint-initdb.d/: create_database.sql
migrations/2020-09-06-113404_create_users_table/: up.sql
queries/v1/users/: find_users_by_email.sql
src/: main.rs  schema.rs
src/app/: config.rs  mod.rs  routes.rs
src/app/error/: error.rs  error_message.rs  mod.rs  not_found.rs
src/app/handlers/articles/: articles_handler.rs  mod.rs
src/app/v1/: mod.rs
src/app/v1/articles/: README.md  mod.rs
src/app/v1/articles/dto/: article_response.rs  get_article_path.rs  mod.rs
src/app/v1/articles/handler/: articles_handler.rs  mod.rs
src/app/v1/users/: README.md  mod.rs
src/app/v1/users/dto/: mod.rs  post_users_request.rs
src/app/v1/users/handler/: mod.rs  users_handler.rs
src/app/v1/users/model/: user.rs
src/app/v1/users/repository/: user_repository.rs
src/app/v1/users/service/: mod.rs  user_service.rs  users_service.rs
