[package]
name = "actix_web_sample"
version = "0.1.0"
authors = ["Takahiro Miyamoto <miyamoto_ta@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = "1.0.115"
serde_json = "1.0.57"
futures = "0.3.5"
http = "0.2.1"