[package]
name = "actix_web_sample"
version = "0.1.0"
authors = ["Takahiro Miyamoto <miyamoto_ta@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = "1.0.115"
serde_json = "1.0.57"
futures = "0.3.5"
http = "0.2.1"
anyhow = "1.0.32"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "mysql", "macros", "chrono"] }
dotenv = "0.15.0"
config = "0.10.1"
chrono = { version = "0.4.15", features = ["serde"] }
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
regex = "1.3.9"
async-trait = "0.1.40"
